name: Create Locations, Jobs, and Shifts
seedFile: fixtures/db/created-event.sql
steps:
  - setViewport:
      width: 1280
      height: 720
  - authenticateUser:
      email: test@eventpilot-test.com
      password: Password
  - open: /events/cmhkuuh7n0005qryc1qvb3ama
  - waitFor: 1000
  - tapOn:
      text: "Volunteer"
      parentSelector: "nav"
      allowScroll: true
      exact: true
  - waitFor: 200
  - tapOn:
      text: "Jobs & Shifts"
      parentSelector: "nav"
      allowScroll: true
      exact: true
  - waitFor: 1000
  # Create a Location
  - tapOn:
      text: "Create a Location"
  - waitFor: 750
  - typeText:
      text: "Test Location"
      placeholder: "Location Name"
  - typeText:
      text: "Test Description"
      placeholder: "Description"
      exact: true
  - tapOn:
      text: "Copy from Start Time"
      parentCy: location-crud
  - waitFor: 70
  - typeText:
      text: "12:00"
      dataCy: "End Time and Date-time"
  - tapOn:
      text: "Create Location"
      parentCy: location-crud
  # First job
  - tapOn:
      text: "Create Job"
  - waitFor: 750
  - typeText:
      text: "Test Job"
      placeholder: "Job Name"
  - typeText:
      text: "A description of what is required to do this job"
      placeholder: "A more lengthy description"
      exact: true
  - tapOn:
      text: "Other"
      parentSelector: ".tour__job-crud"
  - tapOn:
      text: "Create a shift"
      allowScroll: true
  - tapOn:
      text: "Copy from Start Time"
      parentSelector: ".tour__job-crud"
      allowScroll: true
  - typeText:
      text: "08:00"
      selector: "[data-cy='End Time-time']"
      parentSelector: ".tour__job-crud"
      allowScroll: true
  - tapOn:
      text: "Create another shift"
      allowScroll: true
  - tapOn:
      text: "Create another shift"
      allowScroll: true
  - tapOn:
      text: "Create Job"
      allowScroll: true
  - waitFor: 1000
  # Second job
  - tapOn:
      selector: "button.tour__launch-job-crud"
  - waitFor: 750
  - typeText:
      text: "Shorter Test Job"
      placeholder: "Job Name"
  - typeText:
      text: "A description of what is required to do this shorter job"
      placeholder: "A more lengthy description"
      exact: true
  - tapOn:
      text: "Must be over 21"
      parentCy: job-crud
  - tapOn:
      text: "Create a shift"
      allowScroll: true
  - tapOn:
      text: "Copy from Start Time"
      parentCy: job-crud
      allowScroll: true
  - typeText:
      text: "07:00"
      selector: "[data-cy='End Time-time']"
      parentCy: job-crud
      allowScroll: true
  - tapOn:
      text: "Create another shift"
      allowScroll: true
  - tapOn:
      text: "Create another shift"
      allowScroll: true
  - tapOn:
      text: "Create another shift"
      allowScroll: true
  - tapOn:
      text: "Create another shift"
      allowScroll: true
  - tapOn:
      text: "Create another shift"
      allowScroll: true
  - tapOn:
      text: "Create Job"
      allowScroll: true
  - waitFor: 1000
  - takeScreenshot: "jobs-and-shifts-table"
  - tapOn:
      text: "Actions"
  - waitFor: 200
  - tapOn:
      text: "View as Calendar"
  - takeScreenshot: "jobs-and-shifts-calendar"
